--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,33 @@ subprojects {
 }
 
 project(':iam-model') {
+    dependencies {
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
+    }
 }
 
 project(':iam-client') {
     dependencies {
         implementation project(':iam-model')
+
+        implementation('org.slf4j:slf4j-api:1.7.30')
+        implementation('io.jsonwebtoken:jjwt-api:0.11.2')
+        implementation('io.jsonwebtoken:jjwt-impl:0.11.2')
+        implementation('com.squareup.okhttp3:okhttp:4.9.0')
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+        implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
+        implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     }
 }
 
@@ -52,6 +74,22 @@ project(':iam-client-spring') {
     dependencies {
         implementation project(':iam-model')
         implementation project(':iam-client')
+
+        implementation('org.slf4j:slf4j-api:1.7.30')
+        implementation('org.apache.tomcat.embed:tomcat-embed-core:9.0.41')
+        implementation('org.springframework:spring-context:5.3.3')
+        implementation('org.springframework.boot:spring-boot:2.4.2')
+        implementation('org.springframework:spring-web:5.3.3')
+        implementation('org.springframework.security:spring-security-core:5.4.2')
+        implementation('io.jsonwebtoken:jjwt-api:0.11.2')
+        implementation('io.jsonwebtoken:jjwt-impl:0.11.2')
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     }
 }
 
@@ -59,6 +97,20 @@ project(':iam-service-client') {
     dependencies {
         implementation project(':iam-model')
         implementation project(':iam-core')
+
+        implementation('org.slf4j:slf4j-api:1.7.30')
+        implementation('io.jsonwebtoken:jjwt-api:0.11.2')
+        implementation('io.jsonwebtoken:jjwt-impl:0.11.2')
+        implementation('com.squareup.okhttp3:okhttp:4.9.0')
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+        implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
+        implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     }
 }
 
@@ -66,6 +118,23 @@ project(':iam-core') {
     dependencies {
         implementation project(':iam-model')
         implementation project(':iam-client')
+
+        implementation('org.slf4j:slf4j-api:1.7.30')
+        implementation('io.jsonwebtoken:jjwt-api:0.11.2')
+        implementation('io.jsonwebtoken:jjwt-impl:0.11.2')
+        implementation('io.jsonwebtoken:jjwt-jackson:0.11.2') {
+            exclude group: 'com.fasterxml.jackson.core'
+        }
+        implementation('org.bouncycastle:bcpg-jdk15on:1.68')
+        implementation('org.bouncycastle:bcpkix-jdk15on:1.68')
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+
+        testImplementation('org.slf4j:slf4j-simple:1.7.30')
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     }
 }
 
@@ -79,6 +148,24 @@ project(':iam-service') {
         implementation project(':iam-persistence-mongo')
         implementation project(':iam-caches-redis')
         testImplementation project(':iam-service-client')
+
+        implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
+        implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+        implementation 'org.springdoc:springdoc-openapi-ui:1.5.4'
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+
+        implementation 'org.mongodb:mongodb-driver-sync:4.1.1'
+        implementation 'org.mongodb:mongodb-driver-core:4.1.1'
+        implementation ('org.mongojack:mongojack:4.0.2') {
+            exclude group: 'org.mongodb', module: 'mongodb-driver-sync'
+            exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+            exclude group: 'com.fasterxml.jackson.datatype', module: 'jackson-datatype-jsr310'
+        }
+
+        implementation('redis.clients:jedis:3.3.0')
+
+        testImplementation('org.springframework.boot:spring-boot-starter-test')
+        testImplementation 'com.squareup.okhttp3:okhttp:4.9.0'
     }
 }
 
@@ -86,6 +173,18 @@ project(':iam-persistence-file-system') {
     dependencies {
         implementation project(':iam-model')
         implementation project(':iam-core')
+
+        implementation('org.slf4j:slf4j-api:1.7.30')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('org.bouncycastle:bcpg-jdk15on:1.68')
+        implementation('org.bouncycastle:bcpkix-jdk15on:1.68')
+
+        testImplementation('org.slf4j:slf4j-simple:1.7.30')
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     }
 }
 
@@ -93,6 +192,29 @@ project(':iam-persistence-mongo') {
     dependencies {
         implementation project(':iam-model')
         implementation project(':iam-core')
+
+        implementation('org.slf4j:slf4j-api:1.7.30')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.4')
+        implementation('org.bouncycastle:bcpg-jdk15on:1.68')
+        implementation('org.bouncycastle:bcpkix-jdk15on:1.68')
+
+        implementation('org.mongodb:mongodb-driver-sync:4.1.1')
+        implementation 'org.mongodb:mongodb-driver-core:4.1.1'
+        implementation ('org.mongojack:mongojack:4.0.2') {
+            exclude group: 'org.mongodb', module: 'mongodb-driver-sync'
+            exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+            exclude group: 'com.fasterxml.jackson.datatype', module: 'jackson-datatype-jsr310'
+        }
+
+        testImplementation('org.slf4j:slf4j-simple:1.7.30')
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
+        testImplementation('org.testcontainers:junit-jupiter:1.15.2')
+        testImplementation('org.testcontainers:mongodb:1.15.2')
     }
 }
 
@@ -100,6 +222,18 @@ project(':iam-caches-redis') {
     dependencies {
         implementation project(':iam-model')
         implementation project(':iam-core')
+
+        implementation('org.slf4j:slf4j-api:1.7.30')
+        implementation('com.fasterxml.jackson.core:jackson-core:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-databind:2.11.4')
+        implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.4')
+        implementation('redis.clients:jedis:3.3.0')
+
+        testImplementation('org.slf4j:slf4j-simple:1.7.30')
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
+        testImplementation('org.testcontainers:junit-jupiter:1.15.2')
     }
 }
 
@@ -111,6 +245,19 @@ project(':integration-tests') {
         implementation project(':iam-client')
         implementation project(':iam-core')
         implementation project(':iam-service-client')
+
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+        implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
+        implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+        implementation 'org.slf4j:slf4j-api:1.7.30'
+
+        testImplementation('org.slf4j:slf4j-simple:1.7.30')
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
+        testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
     }
 }
 
@@ -121,6 +268,8 @@ project(':spring-resource-server') {
         testImplementation project(':iam-core')
         testImplementation project(':iam-service-client')
         testImplementation project(':integration-tests')
+
+        testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
     }
 }
 
@@ -132,6 +281,15 @@ project(':spring-method-security') {
         testImplementation project(':iam-core')
         testImplementation project(':iam-service-client')
         testImplementation project(':integration-tests')
+
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+        implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
+        implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+        implementation 'org.springdoc:springdoc-openapi-ui:1.5.4'
+
+        testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
     }
 }
 
@@ -142,6 +300,13 @@ project(':spring-webflux-secured') {
         testImplementation project(':iam-core')
         testImplementation project(':iam-service-client')
         testImplementation project(':integration-tests')
+
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+        implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
+        implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+        testImplementation 'com.squareup.okhttp3:okhttp:4.9.0'
     }
 }
 
