--- a/iam-examples/spring-method-security/build.gradle
+++ b/iam-examples/spring-method-security/build.gradle
@@ -15,17 +15,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-	implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
-	implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.5.4'
 
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-	testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 springBoot {
