--- a/build.gradle
+++ b/build.gradle
@@ -239,6 +239,32 @@ project(':iam-caches-redis') {
 
 // Spring EXAMPLES
 
+project(':performance-testing') {
+    dependencies {
+        implementation project(':iam-model')
+        implementation project(':iam-client')
+        implementation project(':iam-core')
+        implementation project(':iam-service-client')
+
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+        implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+        implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
+        implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+        implementation 'org.slf4j:slf4j-api:1.7.30'
+
+        testImplementation('org.slf4j:slf4j-simple:1.7.30')
+        testImplementation('org.junit.jupiter:junit-jupiter:5.7.1')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.1')
+        testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.1')
+        implementation('org.junit.jupiter:junit-jupiter-params:5.7.1')
+        testImplementation('org.junit.platform:junit-platform-suite-api:1.7.1')
+        testImplementation('org.junit.platform:junit-platform-runner:1.7.1')
+        testImplementation('org.junit.vintage:junit-vintage-engine:5.7.1')
+        testImplementation('com.squareup.okhttp3:okhttp:4.9.0')
+    }
+}
+
 project(':integration-tests') {
     dependencies {
         implementation project(':iam-model')
