preparing release 2.5.4-RELEASE

--- a/iam-service/Dockerfile
+++ b/iam-service/Dockerfile
@@ -2,9 +2,10 @@
 
 # https://hub.docker.com/r/adoptopenjdk/openjdk11
 FROM adoptopenjdk/openjdk11:alpine-jre
-COPY build/libs/iam-service-2.5.3-RELEASE.jar /iam-service-2.5.3-RELEASE.jar
+COPY build/libs/iam-service-2.5.4-RELEASE.jar /iam-service-2.5.4-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 COPY src/main/resources/application.yml /application.yml
+COPY src/main/resources/application-cloud.yml /application-cloud.yml
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
 ENV XMX 128m
