--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'one.microproject.iamservice'
-version = '2.5.3-RELEASE'
+version = '2.5.4-RELEASE'
 sourceCompatibility = '11'
 
 repositories {
@@ -20,7 +20,8 @@ dependencies {
 }
 
 springBoot {
-    buildInfo()
+    buildInfo() {
+    }
 }
 
 test {
