--- a/iam-service/build.gradle
+++ b/iam-service/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 }
 
 springBoot {
