--- a/docs/k8s-deployments/iam-service-deployment-amd64.yml
+++ b/docs/k8s-deployments/iam-service-deployment-amd64.yml
@@ -14,41 +14,6 @@ spec:
         app: iam-service
     spec:
       containers:
-        - env:
-            - name: APP_CONFIG_PATH
-              value: /application-cloud.yml
-            - name: IAM_CONTEXT_PATH
-              value:  /auth
-            - name: IAM_AUTH_CODE_CACHE_CLEANUP_INTERVAL
-              value: 10
-            - name: IAM_CACHE_TIME_UNIT
-              value: MINUTE
-            - name: IAM_CACHE_CLEANUP_INTERVAL
-              value: 10
-            - name: IAM_CACHE_TIME_UNIT
-              value: 10
-            - name: IAM_CACHE_TYPE
-              value: redis
-            - name: IAM_REDIS_HOST
-              value: redis.host.com
-            - name: IAM_REDIS_PORT
-              value: 6379
-            - name: IAM_ADMIN_ENABLE_CLIENT_CREDENTIALS
-              value: true
-            - name: IAM_PERSISTENCE_TYPE
-              value: mongo-db
-            - name: IAM_MONGO_PERSISTENCE_HOST
-              value: mongo.host.com
-            - name: IAM_MONGO_PERSISTENCE_PORT
-              value: 27017
-            - name: IAM_MONGO_PERSISTENCE_DATABASE
-              value: iam-service-db
-            - name: IAM_MONGO_PERSISTENCE_USERNAME
-              value: iam-admin
-            - name: IAM_ROOT_LOGLEVEL
-              value: INFO
-            - name: IAM_LOGLEVEL
-              value: INFO
         - name: iam-service
           image: jurajveverka/iam-service:2.5.4-RELEASE-amd64
           ports:
@@ -61,3 +26,38 @@ spec:
             requests:
               memory: 256Mi
               cpu: 500m
+          env:
+            - name: APP_CONFIG_PATH
+              value: "/application-cloud.yml"
+            - name: IAM_CONTEXT_PATH
+              value: "/auth"
+            - name: IAM_AUTH_CODE_CACHE_CLEANUP_INTERVAL
+              value: "10"
+            - name: IAM_CACHE_TIME_UNIT
+              value: "MINUTE"
+            - name: IAM_CACHE_CLEANUP_INTERVAL
+              value: "10"
+            - name: IAM_CACHE_TIME_UNIT
+              value: "MINUTE"
+            - name: IAM_CACHE_TYPE
+              value: "redis"
+            - name: IAM_REDIS_HOST
+              value: "redis.host.com"
+            - name: IAM_REDIS_PORT
+              value: "6379"
+            - name: IAM_ADMIN_ENABLE_CLIENT_CREDENTIALS
+              value: "true"
+            - name: IAM_PERSISTENCE_TYPE
+              value: "mongo-db"
+            - name: IAM_MONGO_PERSISTENCE_HOST
+              value: "mongo.host.com"
+            - name: IAM_MONGO_PERSISTENCE_PORT
+              value: "27017"
+            - name: IAM_MONGO_PERSISTENCE_DATABASE
+              value: "iam-service-db"
+            - name: IAM_MONGO_PERSISTENCE_USERNAME
+              value: "iam-admin"
+            - name: IAM_ROOT_LOGLEVEL
+              value: "INFO"
+            - name: IAM_LOGLEVEL
+              value: "INFO"
