--- a/docs/k8s-deployments/iam-service-setup.yml
+++ b/docs/k8s-deployments/iam-service-setup.yml
@@ -9,11 +9,12 @@ kind: Secret
 metadata:
   name: iam-service
   namespace: iam-service
+type: Opaque
 data:
-  IAM_ADMIN_PASSWORD: c2VjcmV0Cg==
-  IAM_ADMIN_CLIENT_SECRET: dG9wLXNlY3JldAo=
-  IAM_ADMIN_EMAIL: YWRtaW5AZW1haWwuY29tCg==
-  IAM_MONGO_PERSISTENCE_PASSWORD: c2VjcmV0Cg==
+  IAM_ADMIN_PASSWORD: c2VjcmV0
+  IAM_ADMIN_CLIENT_SECRET: dG9wLXNlY3JldA==
+  IAM_ADMIN_EMAIL: YWRtaW5AZW1haWwuY29t
+  IAM_MONGO_PERSISTENCE_PASSWORD: c2VjcmV0
 ---
 apiVersion: v1
 kind: Service
