--- a/build.gradle
+++ b/build.gradle
@@ -254,12 +254,13 @@ project(':performance-testing') {
         implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
         implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
         implementation 'org.slf4j:slf4j-api:1.7.30'
+        implementation 'one.microproject.testmeter:test-meter:0.0.1'
+        implementation('org.junit.jupiter:junit-jupiter-params:5.7.1')
 
         testImplementation('org.slf4j:slf4j-simple:1.7.30')
         testImplementation('org.junit.jupiter:junit-jupiter:5.7.1')
         testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.1')
         testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.1')
-        implementation('org.junit.jupiter:junit-jupiter-params:5.7.1')
         testImplementation('org.junit.platform:junit-platform-suite-api:1.7.1')
         testImplementation('org.junit.platform:junit-platform-runner:1.7.1')
         testImplementation('org.junit.vintage:junit-vintage-engine:5.7.1')
