--- a/iam-service/Dockerfile
+++ b/iam-service/Dockerfile
@@ -1,7 +1,5 @@
-# Compatible with Architecture: x86_64 systems (Intel, AMD)
-
-# https://hub.docker.com/r/adoptopenjdk/openjdk11
-FROM adoptopenjdk/openjdk11:alpine-jre
+ARG ARCH="amd64"
+FROM ${ARCH}/adoptopenjdk:11-jre
 COPY build/libs/iam-service-2.5.5-RELEASE.jar /iam-service-2.5.5-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 COPY src/main/resources/application.yml /application.yml
