--- a/docs/k8s-deployments/iam-service-deployment.yml
+++ b/docs/k8s-deployments/iam-service-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: iam-service
-          image: jurajveverka/iam-service:2.5.5-RELEASE-amd64
+          image: jurajveverka/iam-service:2.5.5-RELEASE
           ports:
             - name: http
               containerPort: 8080
