--- a/iam-service/Dockerfile
+++ b/iam-service/Dockerfile
@@ -1,6 +1,6 @@
 ARG ARCH="amd64"
 FROM ${ARCH}/adoptopenjdk:11-jre
-COPY build/libs/iam-service-2.5.5-RELEASE.jar /iam-service-2.5.5-RELEASE.jar
+COPY build/libs/iam-service-2.5.6-RELEASE.jar /iam-service-2.5.6-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 COPY src/main/resources/application.yml /application.yml
 COPY src/main/resources/application-cloud.yml /application-cloud.yml
@@ -11,4 +11,5 @@ ENV SERVER_PORT 8080
 ENV ADMIN_PASSWORD secret
 ENV ADMIN_SECRET top-secret
 ENV APP_CONFIG_PATH false
+ENV JVM_OPTS ""
 ENTRYPOINT ["/iam-service-start.sh"]
