--- a/release/Dockerfile
+++ b/release/Dockerfile
@@ -1,6 +1,6 @@
 ARG ARCH="amd64"
 FROM ${ARCH}/adoptopenjdk:11-jre
-COPY iam-service-2.5.5-RELEASE.jar /iam-service-2.5.5-RELEASE.jar
+COPY iam-service-2.5.6-RELEASE.jar /iam-service-2.5.6-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 COPY application-filesystem.yml /application.yml
 COPY application-cloud.yml /application-cloud.yml
@@ -11,4 +11,5 @@ ENV SERVER_PORT 8080
 ENV ADMIN_PASSWORD secret
 ENV ADMIN_SECRET top-secret
 ENV APP_CONFIG_PATH "/application.yml"
+ENV JVM_OPTS ""
 ENTRYPOINT ["/iam-service-start.sh"]
