docker: running iam-service as non-root user

--- a/iam-service/Dockerfile
+++ b/iam-service/Dockerfile
@@ -1,11 +1,18 @@
 ARG ARCH="amd64"
 FROM ${ARCH}/adoptopenjdk:11-jre
-COPY build/libs/iam-service-2.5.8-RELEASE.jar /iam-service-2.5.8-RELEASE.jar
+MAINTAINER Juraj Veverka <gergej123@gmail.com>
+COPY build/libs/iam-service-2.5.9-RELEASE.jar /iam-service-2.5.9-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 COPY src/main/resources/application.yml /application.yml
 COPY src/main/resources/application-cloud.yml /application-cloud.yml
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
+
+RUN addgroup iamuser
+RUN useradd -g iamuser -m iamuser
+RUN chown -R iamuser:iamuser /opt/data
+USER iamuser
+
 ENV XMX 128m
 ENV SERVER_PORT 8080
 ENV ADMIN_PASSWORD secret
