--- a/release/Dockerfile
+++ b/release/Dockerfile
@@ -1,10 +1,14 @@
 ARG ARCH="amd64"
 FROM ${ARCH}/adoptopenjdk:11-jre
 MAINTAINER Juraj Veverka <gergej123@gmail.com>
-COPY iam-service-2.5.9-RELEASE.jar /iam-service-2.5.9-RELEASE.jar
+COPY iam-service-2.5.10-RELEASE.jar /iam-service-2.5.10-RELEASE.jar
 COPY iam-service-start.sh /iam-service-start.sh
 COPY application-filesystem.yml /application.yml
 COPY application-cloud.yml /application-cloud.yml
+
+RUN apt update
+RUN apt install -y netcat
+
 RUN chmod +x /iam-service-start.sh
 RUN mkdir -p /opt/data
 
